Change the way we prevent iOS from adding its special dark styling to form elements
iOS makes form elements lighter and more rounded if they have a black background.
We don't want that on our buttons because they become hard to read, so we apply
-webkit-appearance: none to certain elements. We have to be specific to prevent
checkboxes, radios, and other potentially useful things from vanishing.

TODO: Not in this pull request, but the default skin needs the same declaration
on the button for closing the admin banner.

--- a/public/stylesheets/masters/reversi/reversi_site_screen_.css
+++ b/public/stylesheets/masters/reversi/reversi_site_screen_.css
@@ -308,7 +308,6 @@ button,
   color: #eee;
     box-shadow: inset 0 -8px 4px #232323, inset 0 8px 7px #555;
     text-shadow: none;
-    -webkit-appearance: none;
 }
 
 .actions a:visited,
@@ -369,6 +368,13 @@ span.delete {
 .secondary {
   border-color: #555;
     box-shadow: none;
+}
+
+/* don't let iOS add its special styling for dark buttons */
+button,
+input[type="button"],
+input[type="submit"] {
+    -webkit-appearance: none;
 }
 
 /* 09-ROLES-STATES: Because span.unread, .replied, span.claimed, and .actions span.defaulted spoof .actions .current, they're in 08-ACTIONS */
